--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
 /*	01) BASE
 /*---------------------------------------------------*/
 
+.list_item {
+  display: block;
+}
+
 html {
 	overflow-x: hidden;
 	padding: 0px;
@@ -2073,6 +2077,7 @@ a.awilo_fn_circle_link:hover:after{
 	}
 
 }
+
 
 
 
