--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@
 /*	01) BASE
 /*---------------------------------------------------*/
 
+/* Hide bg on small screen*/
+@media (max-width: 1880px) {
+  body {
+    background-image: none !important;
+    background-attachment: scroll;
+  }
+}
+
 /* Hide site initially */
 .awilo_fn_wrapper {
   opacity: 0;
@@ -93,14 +101,7 @@ body{
     background-repeat: no-repeat;  
     background-attachment: fixed;  
 }
-/* Hide background on smaller screens */
 
-@media only screen and (max-width: 768px) {
-  body {
-    background-image: none;
-  }
-
-}
 .awilo_fn_abs_img video {
   width: 100%;
   height: 100%;
@@ -2112,6 +2113,7 @@ a.awilo_fn_circle_link:hover:after{
 	}
 
 }
+
 
 
 
